--- a/01 生成测试数据.md
+++ b/01 生成测试数据.md
@@ -35,4 +35,7 @@ php artisan tinker
 namespace App;
 factory(User::class, 20)->create();
 
+php artisan tinker
+namespace App
+factory(Post::class, 50)->create()
 
