--- a/01 生成测试数据.md
+++ b/01 生成测试数据.md
@@ -32,8 +32,8 @@ $factory->define(App\Post::class, function (Faker\Generator $faker) {
 ```
 
 php artisan tinker
-namespace App;
-factory(User::class, 20)->create();
+namespace App
+factory(User::class, 20)->create()
 
 php artisan tinker
 namespace App
