--- a/01 生成测试数据.md
+++ b/01 生成测试数据.md
@@ -22,11 +22,11 @@ ModelFactory.php
 ```
 /** @var \Illuminate\Database\Eloquent\Factory $factory */
 $factory->define(App\Post::class, function (Faker\Generator $faker) {
-    $userIds = [];
+    $userIds = \App\User::pluck('id')->toArray();
     return [
         'title' => $faker->sentence,
         'body' => $faker->paragraph,
-        'user_id' => $faker->randomElements($userIds)
+        'user_id' => $faker->randomElement($userIds)
     ];
 });
 ```
